[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Rémi Ferrand <remi.ferrand@cc.in2p3.fr>"]
license = "CeCILL 2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
